# diction-php

./: COPYING  DictionBase.php  HACKING  KNOWN_BUGS  Lang.php  LangDE.php  LangEN.php  LangNL.php  README  Readability.php  Sentence.php  Style.php  TODO  sentence.c  style.php  tmp.php
diction_src/: Makefile.in  NEWS  README  config.h.in  configure  configure.in  de.po  diction.1.in  diction.c  diction.pot  diction.spec  diction.texi.in  en_GB.po  getopt.c  getopt.h  misc.c  misc.h  nl.po  sentence.c  sentence.h  style.1.in  style.c
diction_src/test/: test05  test06  test07  test08  test09
tests/: .gitignore  Makefile  sentence.c  sentence.php  sentence_input.txt  sentence_output.txt  style.c  style.php  style_input.list  style_input.txt  test_environment.php
